Fixed pathing issue (would not path correctly when open in website not in live server)

--- a/views/chat_page.html
+++ b/views/chat_page.html
@@ -87,7 +87,7 @@
         <div class="song-bar">
             <div class="song-infos">
                 <div class="image-container">
-                    <img src="/assets/ab67616d0000b273c0e833f8baa95fdcbcc4f65a.jpg" id="image">
+                    <img src="../assets/ab67616d0000b273c0e833f8baa95fdcbcc4f65a.jpg" id="image">
                 </div>
                 <div class="song-description-start">
                     <p class="title"> Fall in Love Alone</p>
@@ -110,7 +110,7 @@
                         <i class="fa fa-step-forward" aria-hidden="true" id="next"></i>             
                     </button>
                 </div>
-                <audio id="audio" src="/assets/Stacey Ryan - Fall In Love Alone (Lyrics).mp3" type="audio/mpeg">
+                <audio id="audio" src="../assets/Stacey Ryan - Fall In Love Alone (Lyrics).mp3" type="audio/mpeg">
                 </audio>
                 <div class="progress-container2" id="progress-container">
                     <span id="current-time">0:00</span>
@@ -127,7 +127,7 @@
                     <p class="artist" id="artist">ILLIT</p>
                 </div>
                 <div class="image-container">
-                    <img src="/assets/download (1).jpg" id="imageN">
+                    <img src="../assets/download (1).jpg" id="imageN">
                 </div>
                 </div>
             </div>
