--- a/views/home_page.html
+++ b/views/home_page.html
@@ -53,23 +53,23 @@
 
         <div class = "top">
             <div class="picture">
-                <img src="/assets/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" draggable="false">
+                <img src="../assets/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" draggable="false">
                 <p>New Playlist</p>
             </div>
             <div class="picture">
-                <img src="/assets/BestMeme.jpg" draggable="false">
+                <img src="../assets/BestMeme.jpg" draggable="false">
                 <p>Friends</p>
             </div>
             <div class="picture">
-                <img src="/assets/images.jpeg" draggable="false">
+                <img src="../assets/images.jpeg" draggable="false">
                 <p>K-Pop</p>
             </div>
             <div class="picture">
-                <img src="/assets/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" draggable="false">
+                <img src="../assets/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" draggable="false">
                 <p>Wibu</p>
             </div>
             <div class="picture">
-                <img src="/assets/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" draggable="false">
+                <img src="../assets/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" draggable="false">
                 <p>Galau</p>
             </div>
         </div>
@@ -82,21 +82,21 @@
                     </button>
                 </div>
                 <div class="recomendation-container">
-                <img src="/assets/download.jpg" class="recomendation-image">
+                <img src="../assets/download.jpg" class="recomendation-image">
                     <div class="recomendation-des">
                         <h2>Lofi Girl</h2>
                         <p>Lofi Girl</p>
                     </div>
                 </div>
                 <div class="recomendation-container">
-                    <img src="/assets/download.jpg" class="recomendation-image">
+                    <img src="../assets/download.jpg" class="recomendation-image">
                         <div class="recomendation-des">
                             <h2>Lofi Girl</h2>
                             <p>Lofi Girl</p>
                         </div>
                     </div>
                 <div class="recomendation-container">
-                    <img src="/assets/download.jpg" class="recomendation-image">
+                    <img src="../assets/download.jpg" class="recomendation-image">
                     <div class="recomendation-des">
                         <h2>Lofi Girl</h2>
                         <p>Lofi Girl</p>
@@ -112,21 +112,21 @@
                     </button>
                 </div>
                 <div class="recomendation-container">
-                <img src="/assets/download.jpg" class="recomendation-image">
+                <img src="../assets/download.jpg" class="recomendation-image">
                     <div class="recomendation-des">
                         <h2>Lofi Girl</h2>
                         <p>Lofi Girl</p>
                     </div>
                 </div>
                 <div class="recomendation-container">
-                    <img src="/assets/download.jpg" class="recomendation-image">
+                    <img src="../assets/download.jpg" class="recomendation-image">
                         <div class="recomendation-des">
                             <h2>Lofi Girl</h2>
                             <p>Lofi Girl</p>
                         </div>
                     </div>
                 <div class="recomendation-container">
-                    <img src="/assets/download.jpg" class="recomendation-image">
+                    <img src="../assets/download.jpg" class="recomendation-image">
                     <div class="recomendation-des">
                         <h2>Lofi Girl</h2>
                         <p>Lofi Girl</p>
@@ -141,21 +141,21 @@
                     </button>
                 </div>
                 <div class="recomendation-container">
-                <img src="/assets/download.jpg" class="recomendation-image">
+                <img src="../assets/download.jpg" class="recomendation-image">
                     <div class="recomendation-des">
                         <h2>Lofi Girl</h2>
                         <p>Lofi Girl</p>
                     </div>
                 </div>
                 <div class="recomendation-container">
-                    <img src="/assets/download.jpg" class="recomendation-image">
+                    <img src="../assets/download.jpg" class="recomendation-image">
                         <div class="recomendation-des">
                             <h2>Lofi Girl</h2>
                             <p>Lofi Girl</p>
                         </div>
                     </div>
                 <div class="recomendation-container">
-                    <img src="/assets/download.jpg" class="recomendation-image">
+                    <img src="../assets/download.jpg" class="recomendation-image">
                     <div class="recomendation-des">
                         <h2>Lofi Girl</h2>
                         <p>Lofi Girl</p>
@@ -172,23 +172,23 @@
                 </div>
                 <div class="favorite-container">
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/drake.jpg">
+                        <img src="../assets/drake.jpg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/kendrik.jpg">
+                        <img src="../assets/kendrik.jpg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
         <div class="song-bar">
             <div class="song-infos">
                 <div class="image-container">
-                    <img src="/assets/ab67616d0000b273c0e833f8baa95fdcbcc4f65a.jpg" id="image">
+                    <img src="../assets/ab67616d0000b273c0e833f8baa95fdcbcc4f65a.jpg" id="image">
                 </div>
                 <div class="song-description-start">
                     <p class="title"> Fall in Love Alone</p>
@@ -226,7 +226,7 @@
                         <i class="fa fa-step-forward" aria-hidden="true" id="next"></i>             
                     </button>
                 </div>
-                <audio id="audio" src="/assets/Stacey Ryan - Fall In Love Alone (Lyrics).mp3" type="audio/mpeg">
+                <audio id="audio" src="../assets/Stacey Ryan - Fall In Love Alone (Lyrics).mp3" type="audio/mpeg">
                 </audio>
                 <div class="progress-container2" id="progress-container">
                     <span id="current-time">0:00</span>
@@ -243,13 +243,13 @@
                     <p class="artist" id="artist">ILLIT</p>
                 </div>
                 <div class="image-container">
-                    <img src="/assets/download (1).jpg" id="imageN">
+                    <img src="../assets/download (1).jpg" id="imageN">
                 </div>
                 </div>
             </div>
         </div>
     </nav>
 
-    <script src="/js/audio.js"></script>
+    <script src="../js/audio.js"></script>
 </body>
 </html>
