--- a/views/register_page.html
+++ b/views/register_page.html
@@ -50,7 +50,7 @@
                     These Legal Terms constitute a legally binding agreement made between you, whether personally or on behalf of an entity ("you"), and PT. Wedio, concerning your access to and use of the Services. You agree that by accessing the Services, you have read, understood, and agreed to be bound by all of these Legal Terms. IF YOU DO NOT AGREE WITH ALL OF THESE LEGAL TERMS, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SERVICES AND YOU MUST DISCONTINUE USE IMMEDIATELY.</p>
             </div>
         </div>
-    <script src="/js/popUp.js"> </script>
-    <script src="/js/validation.js"></script>
+    <script src="../js/popUp.js"> </script>
+    <script src="../js/validation.js"></script>
 </body>
 </html>
