--- a/views/search_page.html
+++ b/views/search_page.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedio-Search</title>
     <link rel="stylesheet" href="../css/general.css">
-    <link rel="stylesheet" href="/css/search.css">
-    <link rel="stylesheet" href="/css/playbar.css">
+    <link rel="stylesheet" href="../css/search.css">
+    <link rel="stylesheet" href="../css/playbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body> 
@@ -53,30 +53,31 @@
         <div class="right">
             <div class="search-container">
                 <form action="/search" method="get">
-                <input type="text" id="search" class="search" name="searchBar" placeholder="  Search for username, title, posts, or playlist">              
+                    <input type="text" id="search" class="search" name="searchBar" placeholder="  Search for username, title, posts, or playlist">              
+                </form>
             </div>
             <div class="favorite-container">
                 <br>
                 <h2>Your Favorite Creators</h2>
                 <div class="favorite-container2">
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/drake.jpg">
+                        <img src="../assets/drake.jpg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/kendrik.jpg">
+                        <img src="../assets/kendrik.jpg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                 </div>
@@ -86,39 +87,39 @@
                 <h2>Reccomended Playlist</h2>
                 <div class="favorite-container2">
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/drake.jpg">
+                        <img src="../assets/drake.jpg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/kendrik.jpg">
+                        <img src="../assets/kendrik.jpg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>
                     <div class="favorite">
-                        <img src="/assets/images.jpeg">
+                        <img src="../assets/images.jpeg">
                         <p class="artist">jennie</p>
                     </div>  
                 </div>
@@ -132,7 +133,7 @@
             <div class="song-bar">
                 <div class="song-infos">
                     <div class="image-container">
-                        <img src="/assets/ab67616d0000b273c0e833f8baa95fdcbcc4f65a.jpg" id="image">
+                        <img src="../assets/ab67616d0000b273c0e833f8baa95fdcbcc4f65a.jpg" id="image">
                     </div>
                     <div class="song-description">
                         <p class="title" id="title"> Fall in Love Alone</p>
@@ -155,7 +156,7 @@
                             <i class="fa fa-step-forward" aria-hidden="true" id="next"></i>             
                         </button>      
                     </div>
-                    <audio id="audio" src="/music/Stacey Ryan - Fall In Love Alone (Lyrics).mp3" type="audio/mpeg"></audio>
+                    <audio id="audio" src="../music/Stacey Ryan - Fall In Love Alone (Lyrics).mp3" type="audio/mpeg"></audio>
                     <div class="progress-container2" id="progress-container">
                         <span id="current-time">0:00</span>
                         <div class="progress-bar" id="progress-bar">
@@ -171,11 +172,11 @@
                             <p class="artist" id="artist">ILLIT</p>
                         </div>
                         <div class="image-container">
-                            <img src="/assets/download (1).jpg" id="imageN">
+                            <img src="../assets/download (1).jpg" id="imageN">
                         </div>
                 </div>
             </div>
         </nav>  
-        <script src="/js/audio.js"></script>
+        <script src="../js/audio.js"></script>
 </body>
 </html>
